golang study >> ginchat user update validate
